--- a/frontend/screen.css
+++ b/frontend/screen.css
@@ -52,6 +52,7 @@ li {display:block; list-style-type:none; padding:0; margin:0; cursor:pointer; }
 
 .block { display:block; }
 .abs {position:absolute; }
+.abr {position:relative; }
 .b {font-weight:bold;}
 .c {float:left;}
 .d {float:right;}
@@ -66,7 +67,7 @@ li {display:block; list-style-type:none; padding:0; margin:0; cursor:pointer; }
 .h3_ {font-size:18px; line-height:18px;}
 .h3 {font-size:16px; line-height:16px;}
 .n {font-size:15px;}
-.m {font-size:12px;}
+.m {font-size:13px;}
 .s {font-size:11px;}
 .ss {font-size:6px;}
 .sss {font-size:2px;}
@@ -297,13 +298,11 @@ ul:hover {background-color:#cee8f0; color:black;}
 .nav a:hover .dl_ {border-right:5px solid white; border-left:0;}
 .nav a:hover .dr_ {border-left:5px solid white; border-right:0; }
 
-:checked + .rc_ a { color:black; }
 
-:checked + .rg a { background-color:#d1d1d1; color:black; }
-:checked + .rg_ { background-color:lightblue; color:black; }
+:checked + .r li { background-color:#d1d1d1; color:black; }
 
 :checked + .r .opt { border:1px solid black; }
-:checked + .r .opt:after { position:absolute; height:5px; width:5px; top:2px; left:2px; border-radius:10px; border:1px solid black; content:" "; background-color:black; }
+:checked + .r .opt:after { position:absolute; height:6px; width:5px; top:2px; left:2px; border-radius:11px; border:1px solid black; content:" "; background-color:black; }
 
 :checked + .r .chk {  border:2px solid black; background-color:black;}
 :checked + .r .chk:after { position:absolute; border-left:2px solid white; border-bottom:2px solid white; content:" "; height:5px; width:12px; top:-2px; left:2px;  transform: rotate(-45deg); }
@@ -316,13 +315,14 @@ ul:hover {background-color:#cee8f0; color:black;}
 :checked + .ol .aj { border:1px solid dodgerblue; }
 :checked + .ol .aj:after { position:absolute; height:1px; width:1px; top:1px; left:1px; background-color:black; border:4px solid dodgerblue; border-radius:4px; content:" ";}
 
-:checked + .sbl { background-color:orange; }
+:checked + .sbl a { background-color:orange; color:white; }
 :checked + .sbr { background-color:aliceblue; border-left:3px solid black; }
 
 
 :checked + .tab a { background-color:black; color:white; }
+:checked + .tabh a { background-color:acliceblue; }
 :checked + .tabi a { background-color:#e3e3e8; color:black; font-weight:bold; border-radius:3px; }
-:checked + .tabu a { border-bottom:2px solid black; color:black; font-weight:bold; }
+:checked + .tabu a { border-bottom:3px solid black; color:black; /*font-weight:bold;*/ }
 :checked + .tabv { display:block; }
 :checked + .tabl a { border-left:3px solid black; background-color:lightblue;}
 
@@ -717,6 +717,7 @@ ul:hover {background-color:#cee8f0; color:black;}
 .bdl { border-radius:6px 0 0 6px; }
 .bdl16 { border-radius:16px 0 0 16px; }
 .bdr { border-radius:0 6px 6px 0; }
+.bdr8 { border-radius:0 8px 8px 0; }
 .bdr_ { border-radius:0 3px 3px 0; }
 
 .z0 { z-index:0; }
@@ -757,11 +758,11 @@ ul:hover {background-color:#cee8f0; color:black;}
 .rc1 { background-color:#e5e5e5;  } 
 
 
-.error {padding:5px 8px; background-color:lavenderblush; color:red; border-left:2px solid pink; box-shadow:1px 1px 1px pink;  margin-right:5px; margin-bottom:5px; float:left; }
+.error {padding:5px 8px; background-color:lavenderblush; color:red; border-left:2px solid pink; box-shadow:1px 1px 1px pink;  margin:2px; float:left; }
 .notice {padding:5px 8px; background-color:lightyellow; color:darkorange; border-left:2px solid darkorange; box-shadow:1px 1px 1px linen; margin-right:5px; margin-bottom:5px; float:left; }
 .info {padding:5px 8px; background-color:honeydew; color:green; border-left: 2px solid green; box-shadow:1px 1px 4px azure; margin-right:5px; margin-bottom:5px; float:left; }
 
-.savn .navl {display:block;}
+/* .savn .navl {display:block;} */
 .savn .savl {display:block;}
 .savn .btn {display:none;}
 .savn .error {display:none;}
@@ -790,7 +791,6 @@ ul:hover {background-color:#cee8f0; color:black;}
 #lds { color:#f2f2f2; padding-left:30px; /*display:none;*/ }
 
 #patk #agtk { display:none; }
-
 
 ._vcal0 { padding-top:10px; }
 ._vcal1 { padding-top:10px; }
@@ -862,14 +862,14 @@ a:hover .awr:before {border-left-color:orange;}
 a:hover .awr:after {border-left-color:#eaeaea;}
 a:hover .aw {color:white;}
 
-.awRR {position:relative;}
-.awRR:before, .awRR:after {position:absolute; border: solid transparent; content:" "; height:0; width:0; top:1px; left:3px; }
-.awRR:before {border-left-color:white; border-width:8px; }
-.awRR:after {border-left-color:black; border-width:6px; margin-left:0px; margin-top:2px;}
+.awR {position:relative;}
+.awR:before, .awR:after {position:absolute; border: solid transparent; content:" "; height:0; width:0; top:1px; left:3px; }
+.awR:before {border-left-color:dimgray; border-width:6px; }
+.awR:after {border-left-color:white; border-width:4px; margin-left:0px; margin-top:1px;}
 
 .ve_ { display:none;}
 #ve .ve_ { display:block; }
-
+ 
 .neg .gr { color:red; }
 .neg .gg { color:green;}
 .neg .go { color:orange; }
