Styles: move Cases.vue scoped CSS into src/styles/cases.css and import globally

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -3,5 +3,6 @@
 @import url('../assets/styles/base.css');
 @import url('./tokens.css');
 @import url('./components.css');
+@import url('./cases.css');
 
 
