Styles: move TranscriptionReviews.vue styles into src/styles/transcription-reviews.css and import globally

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -4,5 +4,6 @@
 @import url('./tokens.css');
 @import url('./components.css');
 @import url('./cases.css');
+@import url('./transcription-reviews.css');
 
 
