--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,5 +5,6 @@
 @import url('./components.css');
 @import url('./cases.css');
 @import url('./transcription-reviews.css');
+@import url('./case-creation.css');
 
 
