Styles: extract Calls.vue styles to src/styles/calls.css and import globally

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -6,5 +6,6 @@
 @import url('./cases.css');
 @import url('./transcription-reviews.css');
 @import url('./case-creation.css');
+@import url('./calls.css');
 
 
