Styles: extract Chats.vue styles to src/styles/chats.css and import globally

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -7,5 +7,6 @@
 @import url('./transcription-reviews.css');
 @import url('./case-creation.css');
 @import url('./calls.css');
+@import url('./chats.css');
 
 
